@@ -1,9 +1,10 @@
 package com.example.tily.roadmap;
 
-import com.example.tily._core.errors.exception.CustomException;
-import com.example.tily._core.errors.exception.Exception403;
-import com.example.tily._core.errors.exception.Exception404;
-import com.example.tily._core.errors.exception.ExceptionCode;
+import com.example.tily._core.errors.CustomException;
+import com.example.tily._core.errors.ExceptionCode;
+import com.example.tily.alarm.AlarmRepository;
+import com.example.tily.comment.Comment;
+import com.example.tily.comment.CommentRepository;
 import com.example.tily.roadmap.relation.GroupRole;
 import com.example.tily.roadmap.relation.UserRoadmap;
 import com.example.tily.roadmap.relation.UserRoadmapRepository;
@@ -18,14 +19,9 @@ import com.example.tily.til.TilRepository;
 import com.example.tily.user.User;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.*;
-import org.springframework.data.util.Pair;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -33,20 +29,27 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Service
 public class RoadmapService {
+
     private final RoadmapRepository roadmapRepository;
     private final StepRepository stepRepository;
     private final ReferenceRepository referenceRepository;
     private final TilRepository tilRepository;
     private final UserRoadmapRepository userRoadmapRepository;
     private final UserStepRepository userStepRepository;
+    private final CommentRepository commentRepository;
+    private final AlarmRepository alarmRepository;
 
+    // 로드맵 생성하기(개인, 그룹)
     @Transactional
-    public RoadmapResponse.CreateRoadmapDTO createIndividualRoadmap(RoadmapRequest.CreateIndividualRoadmapDTO requestDTO, User user){
-
+    public RoadmapResponse.CreateRoadmapDTO createRoadmap(RoadmapRequest.CreateRoadmapDTO requestDTO, User user){
         Roadmap roadmap = Roadmap.builder()
                 .creator(user)
-                .category(Category.CATEGORY_INDIVIDUAL)
+                .category(Category.getCategory(requestDTO.category()))
                 .name(requestDTO.name())
+                .description(requestDTO.description())
+                .isPublic(requestDTO.isPublic()) // 공개여부
+                .code(requestDTO.category().equals(Category.CATEGORY_GROUP.getValue()) ? generateRandomCode() : null)
+                .isRecruit(!requestDTO.category().equals(Category.CATEGORY_INDIVIDUAL.getValue()))    // 모집여부
                 .stepNum(0)
                 .build();
         roadmapRepository.save(roadmap);
@@ -55,6 +58,7 @@ public class RoadmapService {
                 .roadmap(roadmap)
                 .user(user)
                 .role(GroupRole.ROLE_MASTER)
+                .progress(0)
                 .isAccept(true)
                 .build();
         userRoadmapRepository.save(userRoadmap);
@@ -62,19 +66,19 @@ public class RoadmapService {
         return new RoadmapResponse.CreateRoadmapDTO(roadmap);
     }
 
+    // 틸리 로드맵 생성하기 - 임시 api
     @Transactional
-    public RoadmapResponse.CreateRoadmapDTO createGroupRoadmap(RoadmapRequest.CreateGroupRoadmapDTO requestDTO, User user){
-        
+    public RoadmapResponse.CreateRoadmapDTO createTilyRoadmap(RoadmapRequest.CreateTilyRoadmapDTO requestDTO, User user){
         Roadmap roadmap = Roadmap.builder()
                 .creator(user)
-                .category(Category.CATEGORY_GROUP)
+                .category(Category.CATEGORY_TILY)
                 .name(requestDTO.roadmap().name())
                 .description(requestDTO.roadmap().description())
                 .isPublic(requestDTO.roadmap().isPublic()) // 공개여부
-                .currentNum(1L)
                 .code(generateRandomCode())
                 .isRecruit(true)    // 모집여부
                 .stepNum(requestDTO.steps().size())
+                .image(requestDTO.roadmap().image())
                 .build();
         roadmapRepository.save(roadmap);
 
@@ -104,14 +108,22 @@ public class RoadmapService {
             // (1) youtube
             List<RoadmapRequest.ReferenceDTO> youtubeDTOs = referenceDTOs.youtube();
             for(RoadmapRequest.ReferenceDTO youtubeDTO : youtubeDTOs){
-                Reference reference = Reference.builder().step(step).category("youtube").link(youtubeDTO.link()).build();
+                Reference reference = Reference.builder().
+                        step(step).
+                        category("youtube").
+                        link(youtubeDTO.link()).
+                        build();
                 references.add(reference);
             }
 
             // (2) reference
             List<RoadmapRequest.ReferenceDTO> webDTOs = referenceDTOs.web();
             for(RoadmapRequest.ReferenceDTO webDTO : webDTOs){
-                Reference reference = Reference.builder().step(step).category("web").link(webDTO.link()).build();
+                Reference reference = Reference.builder().
+                        step(step).
+                        category("web").
+                        link(webDTO.link()).
+                        build();
                 references.add(reference);
             }
 
@@ -130,11 +142,11 @@ public class RoadmapService {
         return new RoadmapResponse.CreateRoadmapDTO(roadmap);
     }
 
-    public RoadmapResponse.FindGroupRoadmapDTO findGroupRoadmap(Long id, User user){
-        Roadmap roadmap = roadmapRepository.findById(id)
-                .orElseThrow(() -> new CustomException(ExceptionCode.ROADMAP_NOT_FOUND));
+    // 로드맵 정보 조회하기
+    public RoadmapResponse.FindRoadmapDTO findRoadmap(Long roadmapId, User user){
+        Roadmap roadmap = getRoadmapById(roadmapId);
 
-        List<Step> stepList = stepRepository.findByRoadmapId(id);
+        List<Step> stepList = stepRepository.findByRoadmapId(roadmapId);
 
         Map<Long, List<Reference>> youtubeMap = new HashMap<>();
         Map<Long, List<Reference>> webMap = new HashMap<>();
@@ -158,87 +170,47 @@ public class RoadmapService {
             webMap.put(step.getId(), webList);
         }
 
-        List<RoadmapResponse.FindGroupRoadmapDTO.StepDTO> steps = stepList.stream()
-                .map(step -> new RoadmapResponse.FindGroupRoadmapDTO.StepDTO(step
+        List<RoadmapResponse.FindRoadmapDTO.StepDTO> steps = stepList.stream()
+                .map(step -> new RoadmapResponse.FindRoadmapDTO.StepDTO(step
                         , youtubeMap.get(step.getId()).stream()
                         .map(RoadmapResponse.ReferenceDTOs.ReferenceDTO::new).collect(Collectors.toList())
                         , webMap.get(step.getId()).stream()
                         .map(RoadmapResponse.ReferenceDTOs.ReferenceDTO::new).collect(Collectors.toList())))
                 .collect(Collectors.toList());
 
-        Optional<UserRoadmap> userRoadmap = userRoadmapRepository.findByRoadmapIdAndUserIdAndIsAcceptTrue(id, user.getId());
-        String myRole;
-        Long recentTilId;
-        Long recentStepId;
+        String myRole = "none";
+        Long recentTilId = null;
+        Long recentStepId = null;
 
-        if (userRoadmap.isPresent()) {
-            myRole = userRoadmap.get().getRole();
-            List<Til> tils = tilRepository.findByUserIdByOrderByUpdatedDateDesc(id, user.getId());
-            recentTilId = !tils.isEmpty() ? tils.get(0).getId() : null;
-            recentStepId = !tils.isEmpty() ? tils.get(0).getStep().getId() : null;
-        } else {
-            myRole = "none";
-            recentTilId = null;
-            recentStepId = null;
-        }
+        // 해당 페이지(로드맵 상세 조회 페이지)에 들어온 사용자가
+        // 로드맵에 속하고, 로드맵의 step에 저장한 til이 있다면
+        // 최근에 저장한 til과 그에 대한 step 반환
+        if(user != null){
+            Optional<UserRoadmap> userRoadmap = userRoadmapRepository.findByRoadmapIdAndUserIdAndIsAcceptTrue(roadmapId, user.getId());
 
-        return new RoadmapResponse.FindGroupRoadmapDTO(roadmap, steps, roadmap.getCreator(), recentTilId, recentStepId, myRole);
-    }
-
-    // 그룹 로드맵 정보 수정하기 수정필요!
-    @Transactional
-    public void updateGroupRoadmap(Long id, RoadmapRequest.UpdateGroupRoadmapDTO requestDTO, User user){
-        checkMasterAndManagerPermission(id ,user);
-
-        // 로드맵 업데이트
-        Roadmap roadmap = roadmapRepository.findById(id).orElseThrow(
-                () -> new CustomException(ExceptionCode.ROADMAP_NOT_FOUND)
-        );
-
-        String name = requestDTO.roadmap().name();
-        String description = requestDTO.roadmap().description();
-        String code = requestDTO.roadmap().code();
-        Boolean isPublic = requestDTO.roadmap().isPublic();
-        Boolean isRecruit = requestDTO.roadmap().isRecruit();
-
-        roadmap.update(name, description, code, isPublic, isRecruit);
-
-        // 스텝 업데이트
-        List<RoadmapRequest.StepDTO> stepDTOs = requestDTO.steps();
-
-        for(RoadmapRequest.StepDTO stepDTO : stepDTOs){
-            Step step;
-
-            step = stepRepository.findById(stepDTO.id()).orElseThrow(
-                    () -> new CustomException(ExceptionCode.STEP_NOT_FOUND)
-            );
-
-            String title = stepDTO.title() ;
-            String stepDescription = stepDTO.description();
-
-            step.update(title,stepDescription);
-
-            // reference 업데이트
-            List<RoadmapRequest.ReferenceDTO> referenceDTOs = new ArrayList<>();
-            referenceDTOs.addAll(stepDTO.references().web());
-            referenceDTOs.addAll(stepDTO.references().youtube());
-
-            for(RoadmapRequest.ReferenceDTO referenceDTO : referenceDTOs){
-                Reference reference;
-
-                reference = referenceRepository.findById(referenceDTO.id()).orElseThrow(
-                        () -> new CustomException(ExceptionCode.REFERENCE_NOT_FOUND)
-                );
-
-                String link = referenceDTO.link();
-
-                reference.update(link);
+            if (userRoadmap.isPresent()) {
+                myRole = userRoadmap.get().getRole();
+                List<Til> tils = tilRepository.findByUserIdByOrderByUpdatedDateDesc(roadmapId, user.getId());
+                recentTilId = !tils.isEmpty() ? tils.get(0).getId() : null;
+                recentStepId = !tils.isEmpty() ? tils.get(0).getStep().getId() : null;
             }
         }
+
+        return new RoadmapResponse.FindRoadmapDTO(roadmap, steps, roadmap.getCreator(), recentTilId, recentStepId, myRole);
     }
 
-    public RoadmapResponse.FindAllMyRoadmapDTO findAllMyRoadmaps(User user) {
+    // 그룹 로드맵 정보 수정하기
+    @Transactional
+    public void updateRoadmap(Long roadmapId, RoadmapRequest.UpdateRoadmapDTO requestDTO, User user){
+        checkMasterAndManagerPermission(roadmapId ,user);
 
+        Roadmap roadmap = getRoadmapById(roadmapId);
+
+        roadmap.update(requestDTO);
+    }
+
+    // 내가 속한 로드맵 전체 목록 조회하기
+    public RoadmapResponse.FindAllMyRoadmapDTO findAllMyRoadmaps(User user) {
         List<Roadmap> roadmaps = userRoadmapRepository.findByUserIdAndIsAccept(user.getId(), true);      // 내가 속한 로드맵 조회
 
         List<RoadmapResponse.FindAllMyRoadmapDTO.CategoryDTO> categories = roadmaps.stream()
@@ -249,18 +221,21 @@ public class RoadmapService {
                 .filter(roadmap -> roadmap.getCategory().equals(Category.CATEGORY_TILY))
                 .map(RoadmapResponse.TilyDTO::new).collect(Collectors.toList());
 
+        // 내가 속한 그룹 로드맵 조회할 때
+        // 해당 로드맵내 사용자의 관리자(master 또는 manager) 여부 반환
         List<RoadmapResponse.GroupDTO> groups = roadmaps.stream()
                 .filter(roadmap -> roadmap.getCategory().equals(Category.CATEGORY_GROUP))
                 .map(roadmap -> {
                     String groupRole = userRoadmapRepository.findByRoadmapIdAndUserId(roadmap.getId(), user.getId()).get().getRole();
-                    return (groupRole == "master" || groupRole == "manager") ? new RoadmapResponse.GroupDTO(roadmap, true) : new RoadmapResponse.GroupDTO(roadmap, false);
+                    boolean isManager = groupRole.equals(GroupRole.ROLE_MASTER.getValue()) || groupRole.equals(GroupRole.ROLE_MANAGER.getValue());
+                    return new RoadmapResponse.GroupDTO(roadmap, isManager);
                 }).collect(Collectors.toList());
 
         return new RoadmapResponse.FindAllMyRoadmapDTO(categories, new RoadmapResponse.FindAllMyRoadmapDTO.RoadmapDTO(tilys, groups));
     }
 
+    // 로드맵 조회하기
     public RoadmapResponse.FindRoadmapByQueryDTO findAll(String category, String name, int page, int size) {
-
         // 생성일자를 기준으로 내림차순
         Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "createdDate"));
 
@@ -272,18 +247,23 @@ public class RoadmapService {
         return new RoadmapResponse.FindRoadmapByQueryDTO(Category.getCategory(category), roadmapDTOS, hasNext);
     }
 
+    // 그룹 로드맵에 참여 신청하기
     @Transactional
-    public void applyRoadmap(RoadmapRequest.ApplyRoadmapDTO requestDTO, Long id, User user){
-        Roadmap roadmap = getRoadmapById(id);
+    public void applyGroupRoadmap(RoadmapRequest.ApplyRoadmapDTO requestDTO, Long roadmapId, User user){
+        Roadmap roadmap = getRoadmapById(roadmapId);
 
-        // 최초로 한 번만 신청 가능
-        Optional<UserRoadmap> ur = userRoadmapRepository.findByRoadmapIdAndUserId(id, user.getId());
+        // 로드맵이 모집을 중단한 경우
+        if (!roadmap.isRecruit())
+            throw new CustomException(ExceptionCode.ROADMAP_END_RECRUIT);
+
+        // 로드맵에 최초로 한 번만 신청 가능
+        Optional<UserRoadmap> ur = userRoadmapRepository.findByRoadmapIdAndUserId(roadmapId, user.getId());
         if (ur.isPresent()) {
-            if (ur.get().getRole().equals(GroupRole.ROLE_NONE.getValue()))
+            if (ur.get().getRole().equals(GroupRole.ROLE_NONE.getValue()))          // 이미 거절당한 경우
                 throw new CustomException(ExceptionCode.ROADMAP_REJECT);
-            else if (ur.get().getIsAccept().equals(true))
+            else if (ur.get().isAccept())                                           // 이미 소속된 경우
                 throw new CustomException(ExceptionCode.ROADMAP_ALREADY_MEMBER);
-            else
+            else                                                                    // 이미 신청한 경우
                 throw new CustomException(ExceptionCode.ROADMAP_ALREADY_APPLY);
         }
 
@@ -299,69 +279,103 @@ public class RoadmapService {
         userRoadmapRepository.save(userRoadmap);
     }
 
+    // tily 로드맵에 참여 신청하기
+    @Transactional
+    public void applyTilyRoadmap(Long roadmapId, User user) {
+        Roadmap roadmap = getRoadmapById(roadmapId);
+
+        // 로드맵이 모집을 중단한 경우
+        if (!roadmap.isRecruit())
+            throw new CustomException(ExceptionCode.ROADMAP_END_RECRUIT);
+
+        // 이미 tily 로드맵에 속한 경우
+        Optional<UserRoadmap> ur = userRoadmapRepository.findByRoadmapIdAndUserId(roadmapId, user.getId());
+        if (ur.isPresent() && ur.get().isAccept())
+                throw new CustomException(ExceptionCode.ROADMAP_ALREADY_MEMBER);
+
+        UserRoadmap userRoadmap = UserRoadmap.builder()
+                .roadmap(roadmap)
+                .user(user)
+                .role(GroupRole.ROLE_MEMBER)
+                .isAccept(true)
+                .progress(0)
+                .build();
+        userRoadmapRepository.save(userRoadmap);
+
+        // 수강생이 해당 roadmap에 속한다 -> 제출 여부 관리를 위해 모든 step에 대해 userstep에 다 저장
+        saveUserStep(roadmapId, userRoadmap);
+    }
+
+    // 참가 코드로 그룹 로드맵 참여하기
     @Transactional
     public RoadmapResponse.ParticipateRoadmapDTO participateRoadmap(RoadmapRequest.ParticipateRoadmapDTO requestDTO, User user){
         String code = requestDTO.code();
         Roadmap roadmap = roadmapRepository.findByCode(code)
                 .orElseThrow(() -> new CustomException(ExceptionCode.ROADMAP_NOT_FOUND));
 
+        // 이미 로드맵에 속한 경우
         Optional<UserRoadmap> ur = userRoadmapRepository.findByRoadmapIdAndUserIdAndIsAcceptTrue(roadmap.getId(), user.getId());
         if (ur.isPresent())
             throw new CustomException(ExceptionCode.ROADMAP_ALREADY_MEMBER);
 
-        // 코드로 참여시 승인없이 바로 맴버가 된다
         UserRoadmap userRoadmap = UserRoadmap.builder()
                 .roadmap(roadmap)
                 .user(user)
                 .role(GroupRole.ROLE_MEMBER)
                 .content(null)
-                .isAccept(true)
+                .isAccept(true)     // 코드로 참여시 승인없이 수락되고 맴버가 된다
                 .progress(0)
                 .build();
-
         userRoadmapRepository.save(userRoadmap);
+
+        // 해당 roadmap에 속한다 -> 제출 여부 관리를 위해 모든 step에 대해 userstep에 다 저장
+        saveUserStep(roadmap.getId(), userRoadmap);
 
         return new RoadmapResponse.ParticipateRoadmapDTO(roadmap);
     }
 
-    public RoadmapResponse.FindRoadmapMembersDTO findRoadmapMembers(Long groupsId, User user){
-        checkMasterAndManagerPermission(groupsId, user);
+    // 그룹 로드맵의 구성원 전체 조회하기
+    public RoadmapResponse.FindRoadmapMembersDTO findRoadmapMembers(Long roadmapId, User user){
+        String myRole = checkMasterAndManagerPermission(roadmapId, user);
 
-        List<UserRoadmap> userRoadmaps = userRoadmapRepository.findByRoadmapIdAndIsAcceptTrue(groupsId);
+        List<UserRoadmap> userRoadmaps = userRoadmapRepository.findByRoadmapIdAndIsAcceptTrue(roadmapId);
 
         List<RoadmapResponse.FindRoadmapMembersDTO.UserDTO> users = userRoadmaps.stream()
-                .map(userRoadmap -> new RoadmapResponse.FindRoadmapMembersDTO.UserDTO(userRoadmap.getUser().getId(), userRoadmap.getUser().getName(), userRoadmap.getUser().getImage(), userRoadmap.getRole()))
+                .map(userRoadmap -> new RoadmapResponse.FindRoadmapMembersDTO.UserDTO(userRoadmap.getUser(), userRoadmap.getRole()))
                 .collect(Collectors.toList());
 
-        return new RoadmapResponse.FindRoadmapMembersDTO(users);
+        return new RoadmapResponse.FindRoadmapMembersDTO(myRole, users);
     }
 
+    // 그룹 로드맵의 구성원 역할 바꾸기
     @Transactional
-    public void changeMemberRole(RoadmapRequest.ChangeMemberRoleDTO requestDTO, Long groupsId, Long membersId, User user){
-        checkMasterPermission(groupsId, user); // master만 수정 가능
+    public void changeMemberRole(RoadmapRequest.ChangeMemberRoleDTO requestDTO, Long roadmapId, Long membersId, User user){
+        checkMasterPermission(roadmapId, user); // master만 역할 수정 가능
 
-        UserRoadmap userRoadmap = getUserBelongRoadmap(groupsId, membersId);
+        UserRoadmap userRoadmap = getUserBelongRoadmap(roadmapId, membersId);
 
         userRoadmap.updateRole(requestDTO.role());
     }
 
+    // 그룹 로드맵의 구성원 강퇴하기
     @Transactional
-    public void dismissMember(Long groupsId, Long membersId, User user){
-        String role = checkMasterAndManagerPermission(groupsId, user);
+    public void dismissMember(Long roadmapId, Long membersId, User user){
+        String role = checkMasterAndManagerPermission(roadmapId, user);
 
-        UserRoadmap userRoadmap = getUserBelongRoadmap(groupsId, membersId);
+        UserRoadmap userRoadmap = getUserBelongRoadmap(roadmapId, membersId);
 
-        // master는 다 강퇴 가능, manager는 member만
+        // master는 다 강퇴 가능, manager는 member만 강퇴 가능
         if (role.equals(GroupRole.ROLE_MANAGER.getValue()) & userRoadmap.getRole().equals(GroupRole.ROLE_MASTER.getValue()))
             throw new CustomException(ExceptionCode.ROADMAP_DISMISS_FORBIDDEN);
 
-        userRoadmap.updateRole(GroupRole.ROLE_NONE.getValue());
+        userRoadmap.updateRoleAndIsAccept(GroupRole.ROLE_NONE.getValue(), false);
     }
 
-    public RoadmapResponse.FindAppliedUsersDTO findAppliedUsers(Long groupsId, User user){
-        checkMasterAndManagerPermission(groupsId, user);
+    // 그룹 로드맵에 신청한 사람들 목록 조회하기
+    public RoadmapResponse.FindAppliedUsersDTO findAppliedUsers(Long roadmapId, User user){
+        checkMasterAndManagerPermission(roadmapId, user);
 
-        List<UserRoadmap> userRoadmaps = userRoadmapRepository.findByRoadmapIdAndIsAcceptFalseAndRole(groupsId, GroupRole.ROLE_MEMBER.getValue());
+        List<UserRoadmap> userRoadmaps = userRoadmapRepository.findByRoadmapIdAndIsAcceptFalseAndRole(roadmapId, GroupRole.ROLE_MEMBER.getValue());
 
         List<RoadmapResponse.FindAppliedUsersDTO.UserDTO> users = userRoadmaps.stream()
                 .map(userRoadmap -> new RoadmapResponse.FindAppliedUsersDTO.UserDTO(userRoadmap.getUser(), userRoadmap))
@@ -370,104 +384,78 @@ public class RoadmapService {
         return new RoadmapResponse.FindAppliedUsersDTO(users);
     }
 
+    // 그룹 로드맵 참여 신청 승인
     @Transactional
-    public void acceptApplication(Long groupId, Long memberId, User user){
-        checkMasterAndManagerPermission(groupId, user);
+    public void acceptApplication(Long roadmapId, Long memberId, User user){
+        checkMasterAndManagerPermission(roadmapId, user);
 
-        UserRoadmap userRoadmap = getUserNotBelongRoadmap(groupId, memberId);
+        UserRoadmap userRoadmap = getUserNotBelongRoadmap(roadmapId, memberId);
 
-        // 이미 거절당한 사람(NONE) 이면
+        // 이미 로드맵에 대해 신청 거절당한 사람(none)인 경우
         if (userRoadmap.getRole().equals(GroupRole.ROLE_NONE.getValue()))
             throw new CustomException(ExceptionCode.ROADMAP_REJECT);
 
         userRoadmap.updateIsAccept(true);
 
-        // 승인하면 수강생이 해당 roadmap에 속한다 -> 제출 여부 관리를 위해 모든 step에 대해 userstep에 다 저장
-        List<Step> steps = stepRepository.findByRoadmapId(groupId);
-        for (Step step : steps) {
-            UserStep userStep = UserStep.builder()
-                    .roadmap(step.getRoadmap())
-                    .step(step)
-                    .user(userRoadmap.getUser())
-                    .isSubmit(false)
-                    .build();
-            userStepRepository.save(userStep);
-        }
+        saveUserStep(roadmapId, userRoadmap);
     }
 
+    // 그룹 로드맵 참여 신청 거절
     @Transactional
-    public void rejectApplication(Long groupId, Long memberId, User user){
-        checkMasterAndManagerPermission(groupId, user);
+    public void rejectApplication(Long roadmapId, Long memberId, User user){
+        checkMasterAndManagerPermission(roadmapId, user);
 
-        UserRoadmap userRoadmap = getUserNotBelongRoadmap(groupId, memberId);
+        UserRoadmap userRoadmap = getUserNotBelongRoadmap(roadmapId, memberId);
 
+        // 거절당한 사람은 none 으로 역할 수정
         userRoadmap.updateRole(GroupRole.ROLE_NONE.getValue());
     }
 
+    // 로드맵 삭제하기
     @Transactional
-    public RoadmapResponse.FindTilOfStepDTO findTilOfStep(Long groupsId, Long stepId, Boolean isSubmit, Boolean isMember, String name){
-//        List<Pair<Til, User>> pairs = new ArrayList<>();
-//
-//        List<Til> tils = tilRepository.findByStepId(stepId);
-//        for(Til til : tils){
-//            User user = til.getWriter();
-//
-//            // 어떤 틸이 존재한다면, 해당 틸은 반드시 틸이 속한 Step과 Roadmap 그리고 User를 가진다 => userStep 관계와 userRoadmap 관계는 반드시 존재한다. => 존재하지 않은 것에 대한 예외처리 필요 X
-//            UserStep userStep = userStepRepository.findByUserIdAndStepId(user.getId(), stepId).get();
-//            UserRoadmap userRoadmap = userRoadmapRepository.findByRoadmapIdAndUserId(groupsId, user.getId()).get();
-//
-//            if((isSubmit == userStep.getIsSubmit())  && (name == null || name.equals(user.getName()))){
-//                // isMember가 false => 운영자를 포함해서 모든 til을 반환, isMember가 true => 운영자의 til을 제외하고 반환한다
-//                if(!isMember || (isMember && GroupRole.ROLE_MEMBER.equals(userRoadmap.getRole()))){
-//                    Pair<Til, User> pair = Pair.of(til, user);
-//                    pairs.add(pair);
-//                }
-//            }
-//        }
-//
-//        List<RoadmapResponse.FindTilOfStepDTO.MemberDTO> members;
-//
-//        if(isSubmit) {
-//            members = pairs.stream()
-//                    .map(pair -> new RoadmapResponse.FindTilOfStepDTO.MemberDTO(pair.getFirst().getId(), pair.getSecond().getId(),pair.getSecond().getName(), pair.getSecond().getImage(), pair.getFirst().getContent(), pair.getFirst().getSubmitDate().toLocalDate(), pair.getFirst().getCommentNum()))
-//                    .collect(Collectors.toList());
-//        }
-//        else {
-//            members = pairs.stream()
-//                    .map(pair -> new RoadmapResponse.FindTilOfStepDTO.MemberDTO(null, pair.getSecond().getId(), pair.getSecond().getName(), null, null, null, 0))
-//                    .collect(Collectors.toList());
-//        }
-//
-//        return new RoadmapResponse.FindTilOfStepDTO(members);
+    public void deleteRoadmap(Long roadmapId, User user){
+        checkMasterAndManagerPermission(roadmapId, user);
 
-        // 특정 로드맵에 속한 UserRoadmap list
-        List<UserRoadmap> userRoadmaps = userRoadmapRepository.findByRoadmapIdAndIsAcceptTrue(groupsId);
-        List<User> users = userStepRepository.findAllByStepIdAndIsSubmitAndName(stepId, isSubmit, name)
-                .stream().map(UserStep::getUser).toList(); // 특정 step에 대해 제출 여부, 사용자 이름으로 user 조회
+        // Til 삭제
+        List<Til> tils = tilRepository.findByRoadmapId(roadmapId);
+        List<Long> tilIds = tils.stream()
+                .map(Til::getId)
+                .collect(Collectors.toList());
 
-        List<RoadmapResponse.FindTilOfStepDTO.MemberDTO> members = new ArrayList<>();
+        tilRepository.softDeleteTilsByTilIds(tilIds);
 
-        if (isMember) { // 로드맵에 속한 member만 대해
-            for (User user : users) {
-                // 로드맵에서의 사용자의 role을 알기 위해 사용자의 userRoadmap 조회
-                Optional<UserRoadmap> userRoadmap = userRoadmaps.stream().filter(u -> u.getUser().equals(user)).findFirst();
+        // Til과 연관된 Comment들 삭제
+        List<Comment> comments = getCommentsByTilIds(tilIds);
+        List<Long> commentIds = comments.stream()
+                .map(Comment::getId)
+                .collect(Collectors.toList());
 
-                if (userRoadmap.isPresent() & userRoadmap.get().getRole().equals(GroupRole.ROLE_MEMBER.getValue())) {
-                    Til til = tilRepository.findByStepIdAndUserId(stepId, user.getId());
-                    if (til==null) members.add(new RoadmapResponse.FindTilOfStepDTO.MemberDTO(null, user));
-                    else members.add(new RoadmapResponse.FindTilOfStepDTO.MemberDTO(til, user));
-                }
-            }
-        } else { // 로드맵에 속한 모든 사용자에 대해
-            for (User user : users) {
-                Til til = tilRepository.findByStepIdAndUserId(stepId, user.getId());
-                if (til==null) members.add(new RoadmapResponse.FindTilOfStepDTO.MemberDTO(null, user));
-                else members.add(new RoadmapResponse.FindTilOfStepDTO.MemberDTO(til, user));
-            }
-        }
+        commentRepository.softDeleteCommentsByIds(commentIds);
 
-        return new RoadmapResponse.FindTilOfStepDTO(members);
+        // Comment와 관련된 알람 삭제
+        alarmRepository.deleteByCommentIds(commentIds);
+
+        // 로드맵의 Reference들을 삭제
+        List<Step> steps = getStepsByRoadmapId(roadmapId);
+        List<Long> stepIds = steps.stream()
+                .map(Step::getId)
+                .collect(Collectors.toList());
+
+        referenceRepository.softDeleteReferenceByStepIds(stepIds);
+
+        // 로드맵의 Step들을 삭제
+        stepRepository.softDeleteStepByStepIds(stepIds);
+
+        // UserStep들을 삭제
+        userStepRepository.softDeleteUserStepByStepIds(stepIds);
+
+        // UserRoadmap을 삭제
+        userRoadmapRepository.softDeleteUserRoadmapByRoadmapId(roadmapId);
+
+        // Roadmap을 삭제
+        roadmapRepository.softDeleteRoadmapById(roadmapId);
     }
+
 
     private static String generateRandomCode() {
         String upperAlphabet = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
@@ -495,27 +483,23 @@ public class RoadmapService {
         if(!userRoadmap.getRole().equals(GroupRole.ROLE_MASTER.getValue()) && !userRoadmap.getRole().equals(GroupRole.ROLE_MANAGER.getValue())){
             throw new CustomException(ExceptionCode.ROADMAP_FORBIDDEN);
         }
+
         return userRoadmap.getRole();
     }
 
     private UserRoadmap checkMasterPermission(Long roadmapId, User user) {
         UserRoadmap userRoadmap = getUserBelongRoadmap(roadmapId, user.getId());
 
-        if(!userRoadmap.getRole().equals(GroupRole.ROLE_MASTER.getValue()))
+        if (!userRoadmap.getRole().equals(GroupRole.ROLE_MASTER.getValue()))
             throw new CustomException(ExceptionCode.ROADMAP_ONLY_MASTER);
 
         return userRoadmap;
     }
 
-    private void checkUserPermission(Long groupId, User user) { // 추후에 사용할지 몰라 남겨둠, 유저만 접근
-        UserRoadmap userRoadmap = getUserBelongRoadmap(groupId, user.getId());
-
-        if(userRoadmap.getRole().equals(GroupRole.ROLE_NONE.getValue()))
-            throw new CustomException(ExceptionCode.ROADMAP_FORBIDDEN);
-    }
-
     // 해당 로드맵에 속한 user
     private UserRoadmap getUserBelongRoadmap(Long roadmapId, Long userId) {
+        getRoadmapById(roadmapId);
+
         return userRoadmapRepository.findByRoadmapIdAndUserIdAndIsAcceptTrue(roadmapId, userId).orElseThrow(() -> new CustomException(ExceptionCode.ROADMAP_NOT_BELONG));
     }
 
@@ -523,16 +507,30 @@ public class RoadmapService {
         return roadmapRepository.findById(roadmapId).orElseThrow(() -> new CustomException(ExceptionCode.ROADMAP_NOT_FOUND));
     }
 
+    private List<Step> getStepsByRoadmapId(Long roadmapId){
+        return stepRepository.findByRoadmapId(roadmapId);
+    }
+
+    private List<Comment> getCommentsByTilIds( List<Long> tilIds){
+        return commentRepository.findByTilIds(tilIds);
+    }
+
     // 해당 로드맵에 속하지 않은 user
     private UserRoadmap getUserNotBelongRoadmap(Long roadmapId, Long userId) {
         return userRoadmapRepository.findByRoadmapIdAndUserIdAndIsAcceptFalse(roadmapId, userId).orElseThrow(() -> new CustomException(ExceptionCode.USER_NOT_FOUND));
     }
 
-    private LocalDateTime parseDate(String date) {
-        try {
-            return LocalDateTime.parse(date, DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
-        } catch (DateTimeParseException e) {
-            throw new CustomException(ExceptionCode.DATE_WRONG);
+    // 로드맵의 모든 step에 대해 userstep에 다 저장
+    private void saveUserStep(Long roadmapId, UserRoadmap userRoadmap) {
+        List<Step> steps = stepRepository.findByRoadmapId(roadmapId);
+        for (Step step : steps) {
+            UserStep userStep = UserStep.builder()
+                    .roadmap(step.getRoadmap())
+                    .step(step)
+                    .user(userRoadmap.getUser())
+                    .isSubmit(false)
+                    .build();
+            userStepRepository.save(userStep);
         }
     }
 }
